// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
._bYkcXx._bYkcXx._bYkcXx:active {
  color: var(--colors-primary500);
}

._kNYlGF._kNYlGF._kNYlGF._kNYlGF:focus,
._kNYlGF:hover {
  text-decoration-line: underline;
}

._wFLKx._wFLKx._wFLKx._wFLKx:focus,
._wFLKx:hover {
  color: var(--colors-primary900);
}

._MxdQF:visited {
  color: var(--colors-primary500);
}

._cKSYdt {
  cursor: pointer;
}

._kaGCev {
  text-decoration-line: none;
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._goMgqD {
  color: var(--colors-primary500);
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

<div>
  <a
    class="_dIHnma _bIcFyi _laGdYr _goMgqD _oIZSq _kaGCev _cKSYdt _MxdQF _wFLKx _kNYlGF _bYkcXx scid-zNoKV"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
._hIHyGI {
  font-size: var(--fontSizes-lg);
}

._bYkcXx._bYkcXx._bYkcXx:active {
  color: var(--colors-primary500);
}

._kNYlGF._kNYlGF._kNYlGF._kNYlGF:focus,
._kNYlGF:hover {
  text-decoration-line: underline;
}

._wFLKx._wFLKx._wFLKx._wFLKx:focus,
._wFLKx:hover {
  color: var(--colors-primary900);
}

._MxdQF:visited {
  color: var(--colors-primary500);
}

._cKSYdt {
  cursor: pointer;
}

._kaGCev {
  text-decoration-line: none;
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._goMgqD {
  color: var(--colors-primary500);
}

._laGdYr {
  line-height: 1.4;
}

._bIcFyi {
  letter-spacing: 0.02em;
}

<div>
  <a
    class="_hIHyGI _bIcFyi _laGdYr _goMgqD _oIZSq _kaGCev _cKSYdt _MxdQF _wFLKx _kNYlGF _bYkcXx scid-zNoKV"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
